--- a/index.html
+++ b/index.html
@@ -26,7 +26,14 @@
 
 
 
-<script src="main.js"></script>
+
+
+<script src="js/classes.js"></script>
+<script src="js/declarations.js"></script>
+<script src="js/aux.js"></script>
+<script src="js/main.js"></script>
+<script src="js/listeners.js"></script>
+
 </div>
 </body>
 </html>
