--- a/index.html
+++ b/index.html
@@ -16,9 +16,13 @@
     <button class="start-button" id = "start">START</button>
 
     <button class="stop-button" id = "stop">PAUSE</button>
-</div>
- 
 
+
+  <video width="400" height="250" controls>
+    <source src="resources/dramabug.mp4" type="video/mp4">
+  </video>
+
+</div>
 
 
 
