--- a/index.html
+++ b/index.html
@@ -23,9 +23,10 @@
   </video>
 
 </div>
-
-
-
+<div id="background">
+<img id= "cover" src="resources/cover.png" alt="Cover">
+<img id =  "catbug" src="resources/catbug.png" alt="catbug">
+</div>
 <canvas  height="780" width = "500" id= "gameBoard"> </canvas>
 
 
