--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="styles.css">
+  
   <link href="https://fonts.googleapis.com/css?family=Hi+Melody" rel="stylesheet">
   <title>BW Jump</title>
 </head>
@@ -13,10 +14,10 @@
   <div class= "options">
 <img src="resources/gamename.png" alt="The date... Not" class="title">
 
-    <button class="start-button" id = "start">START</button>
+    <button  class="start-button cell" id = "start">START</button>
 
-    <button class="stop-button" id = "stop">PAUSE</button>
-
+    <button class="stop-button cell" id = "stop">PAUSE</button>
+    <button class="button-change cell" id="continue">CONTINUE</button>
 
   <video width="400" height="250" controls>
     <source src="resources/dramabug.mp4" type="video/mp4">
@@ -24,14 +25,14 @@
 
 </div>
 <div id="background">
-<img id= "cover" src="resources/cover.png" alt="Cover">
-<img id =  "catbug" src="resources/catbug.png" alt="catbug">
+  
+
 </div>
 <canvas  height="780" width = "500" id= "gameBoard"> </canvas>
 
 
 
-
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script> 
 
 <script src="js/classes.js"></script>
 <script src="js/declarations.js"></script>
@@ -40,5 +41,7 @@
 <script src="js/listeners.js"></script>
 
 </div>
+<img id= "cover" class="cover" src="resources/cover.png" alt="Cover">
+<img class="catbug" id="catbug" src="resources/catbug.png" alt="catbug">
 </body>
 </html>
